# ModuMark

./: .env.example  .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: settings.json  settings.local.json
.claude/agents/: brd-specialist.md  ddd-architect.md  e2e-tester.md  integration-tester.md  prd-specialist.md  roadmap-planner.md  ui-designer.md  unit-tester.md
.github/workflows/: release.yml  sign-config.md
docs/: BRD.md  PRD.md  README.md  ROADMAP.md
docs/editor/: BRD.md  PRD.md  ROADMAP.md  domain-model.md
docs/figma/: component-map.md  design-system.md  design-tokens.md  feature-proposals.md  figma-update-checklist.md  future-review.md  gap-analysis.md
docs/markdown/: BRD.md  PRD.md  ROADMAP.md
docs/monetization/: BRD.md  PRD.md  ROADMAP.md  domain-model.md
docs/pdf/: BRD.md  PRD.md  ROADMAP.md  domain-model.md
docs/platform/: BRD.md  EXTERNAL-TASKS.md  PRD.md  ROADMAP.md  domain-model.md
docs/애드고시/: Google 게시자 정책  고품질 사이트 구축에 대한 추가 안내  고품질 사이트를 만들기 위한 도움말  고품질 사이트를 만들기 위한 도움말 2부  애드센스 프로그램 정책  자주 발생하는 구글 애드센스 정책 위반 사례 TOP7
e2e/specs/: editor-ad.spec.ts  editor-table.spec.ts  editor.spec.ts  markdown-mermaid.spec.ts  pdf-download.spec.ts  pdf-sidebar-thumbnail.spec.ts  pdf.spec.ts  public-pages.spec.ts  (+3 more)
messages/: en.json  ko.json
playwright-report/: index.html
public/: ads.txt  manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
(+152 files in other folders)
